trustable/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trustable
  namespace: nuvolaris
  labels:
    app: trustable
spec:
  serviceName: trustable
  replicas: 1
  selector:
    matchLabels:
      app: trustable
  template:
    metadata:
      labels:
        app: trustable
    spec:
      hostname: trustable
      volumes:
      - name: workspace
        hostPath:
          path: /workspace
      - name: nginx-config
        configMap:
          name: nginx-proxy-config
      containers:
      - name: devcontainer
        image: $IMAGE
        ports:
        - containerPort: 2222
          name: ssh
          protocol: TCP
        securityContext:
          runAsUser: $USERID
          runAsGroup: $USERID
        volumeMounts:
        - name: workspace
          mountPath: /home/node/workspace
      - name: reverse-proxy
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        command: ["nginx", "-g", "daemon off;"]
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: trustable-ssh
  namespace: nuvolaris
  labels:
    app: trustable
spec:
  type: NodePort
  selector:
    app: trustable
  ports:
  - port: 2222
    targetPort: 2222
    nodePort: 30222
    protocol: TCP
    name: ssh
