trustable/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trustable-ing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: trustable.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trustable-svc
                port:
                  number: 8910
  #tls:
  #  - hosts:
  #      - trustable.$DOMAIN
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencode-ing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: opencode.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trustable-svc
                port:
                  number: 8910
  #tls:
  #  - hosts:
  #      - opencode.$DOMAIN
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vite-ing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: vite.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trustable-svc
                port:
                  number: 5173
  #tls:
  #  - hosts:
  #      - vite.$DOMAIN
